improved consistency between spark and flink